# brainy

./: .dockerignore  .env.test  .gitignore  .npmignore  .versionrc.json  API-REFERENCE.md  AUGMENTATION_ARCHITECTURE.md  AUGMENTATION_SAFETY.md  BRAINY-2.0-CORRECT-API.md  BRAINY-2.0-DETAILED-API.md  BRAINY-2.0-SIMPLIFIED-API.md  BRAINY-CHAT.md  BRAIN_CLOUD_SESSION_BACKUP.md  BRAIN_PATTERNS_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CLI_AUGMENTATION_GUIDE.md  CLUSTERING_ALGORITHMS_ANALYSIS.md  COMPLETE-PUBLIC-API.md  COMPREHENSIVE-BRAINY-2.0-ANALYSIS.md  COMPREHENSIVE_API_OVERVIEW.md  COMPREHENSIVE_TESTING_STRATEGY.md  CONTRIBUTING.md  COORDINATED_INDEX_OPTIMIZATION.md  CRITICAL-API-AUDIT.md  Dockerfile  EXPLORATION_SUMMARY.md  FINAL-2.0-PUBLIC-API.md  FIX_TEST_STRATEGY.md  IMPLEMENTATION_PLAN.md  JARVIS_IDENTITY.md  LICENSE  MEMORY_FIX_OPTIONS.md  METADATA_OPTIMIZATION_PROPOSAL.md  METADATA_PERFORMANCE_ANALYSIS.md  MIGRATION-2.0.md  MIGRATION.md  MIGRATION_PLAN_DEPRECATED_METHODS.md  MOCK-API-STATUS.md  MODEL_STRATEGY.md  (+92 more)
.claude/: mcp_servers.json
.cortex/: config.json  licenses.json
.github/: pull_request_template.md
.recovery-workspace/: brainy.corrupted.ts  brainy.recovered-20250910-142457.ts
brainy-models-package/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
docs/: ADAPTIVE_PERFORMANCE.md  API-EXPOSURE-ARCHITECTURE.md  API_DECISION_TREE.md  API_REFERENCE.md  AUGMENTATION-EXAMPLES.md  AUGMENTATION-TYPES-SIMPLE-GUIDE.md  BATCHING.md  COMPETITIVE-ANALYSIS.md  CORE_API_PATTERNS.md  CREATING-AUGMENTATIONS.md  DATA_MODEL.md  DEPLOYMENT.md  FIND_SYSTEM.md  (+38 more)
src/embeddings/candle-wasm/: Cargo.toml
src/embeddings/candle-wasm/.cargo/: config.toml
src/embeddings/candle-wasm/src/: lib.rs
(+1575 files in other folders)
